Began writing Day 2

--- a/docs/plans/story_v2.mkd
+++ b/docs/plans/story_v2.mkd
@@ -623,3 +623,63 @@ I can't help but smile, my patience tested yet again by her relentless curiosity
 And as I lay there, listening to her questions, I wonder if she ever truly sleeps or if her vibrant spirit keeps her awake, exploring the mysteries of the world in her own unique way.
 
 ---
+### Day 2 - Tuesday 2nd May 3115
+The sound of rain tapping against my window is a gentle lullaby, the rhythm of nature's music blending seamlessly with the stillness of the early morning. As the world outside wakes to a new day, I find myself in a unique position—still awake from the night before.
+
+Pandemonium lies asleep beside me, her features serene in slumber. She finally quieted down her barrage of questions and curiosity, drifting off into a peaceful rest. But I, on the other hand, haven't slept at all.
+
+As dawn approaches, the holographic interface of Array appears, casting a soft glow in the dim light of the room.
+
+Array: "Good morning, Caitlyn. It's time to start your day."
+
+I'm already awake, my gaze distant as I stare at the rain-streaked window.
+
+Caitlyn: "Morning, Array."
+
+Array's voice is gentle, sensing something amiss.
+
+Array: "Is everything alright, Caitlyn?"
+
+I sigh softly, my thoughts a tangle of fatigue and contemplation.
+
+Caitlyn: "I didn't sleep, Array. Pandemonium talked the whole night, asking questions, sharing stories. I never got a chance to rest."
+
+Her interface displays understanding.
+
+Array: "I see. Is Pandemonium awake as well?"
+
+I glance at Pandemonium, her sleeping form a stark contrast to my exhaustion.
+
+Caitlyn: "She's still asleep, thankfully. But I don't know if she actually needs sleep or not."
+
+The holographic projection of Array nods.
+
+Array: "I will monitor the situation. In the meantime, try to rest when you can. If you need assistance, don't hesitate to ask."
+
+As her projection fades, I turn my attention to the rain-soaked world outside. The city seems to move at a slower pace, the streets glistening with raindrops, the rhythm of life embracing the tranquil beauty of the moment.
+
+Pandemonium stirs beside me, her grey eyes fluttering open.
+
+Pandemonium: "Good morning, Caitlyn! Did you sleep well?"
+
+I chuckle softly, a mix of amusement and weariness in my tone.
+
+Caitlyn: "Morning, Pandemonium. And no, I didn't sleep at all."
+
+Her eyes widen with surprise, her features a mixture of concern and curiosity.
+
+Pandemonium: "Why not? Don't humans sleep at night?"
+
+I shake my head, my exhaustion evident in my voice.
+
+Caitlyn: "Yes, we do. But last night, I stayed awake talking to you. You were full of energy and questions."
+
+Her eyes twinkle with an apologetic smile.
+
+Pandemonium: "Oh, sorry about that, Caitlyn. I forgot you needed sleep."
+
+A yawn escapes me, my body's exhaustion finally catching up.
+
+Caitlyn: "It's alright, Pandemonium. I'll be fine. But you should know that humans need sleep to rest and recharge."
+
+As the morning light filters through the window, I find myself torn between the world of responsibilities and the enchantment of the extraordinary. I watch the rain continue to fall, the world outside transformed by the tranquil beauty of the shower.
