Wrote more of Day 2

--- a/docs/plans/story_v2.mkd
+++ b/docs/plans/story_v2.mkd
@@ -624,7 +624,7 @@ And as I lay there, listening to her questions, I wonder if she ever truly sleep
 
 ---
 ### Day 2 - Tuesday 2nd May 3115
-The sound of rain tapping against my window is a gentle lullaby, the rhythm of nature's music blending seamlessly with the stillness of the early morning. As the world outside wakes to a new day, I find myself in a unique position—still awake from the night before.
+The sound of rain tapping against my window is a gentle lullaby, the rhythm of nature's music blending seamlessly with the stillness of the early morning. As the world outside wakes to a new day, I find myself in a unique position - still awake from the night before.
 
 Pandemonium lies asleep beside me, her features serene in slumber. She finally quieted down her barrage of questions and curiosity, drifting off into a peaceful rest. But I, on the other hand, haven't slept at all.
 
@@ -682,4 +682,300 @@ A yawn escapes me, my body's exhaustion finally catching up.
 
 Caitlyn: "It's alright, Pandemonium. I'll be fine. But you should know that humans need sleep to rest and recharge."
 
-As the morning light filters through the window, I find myself torn between the world of responsibilities and the enchantment of the extraordinary. I watch the rain continue to fall, the world outside transformed by the tranquil beauty of the shower.
+The short rain shower outside has subsided, leaving behind a fresh scent in the air. As the morning light filters through the windows, I find myself preparing breakfast, the aroma of freshly brewed coffee mingling with the promise of a new day.
+
+Pandemonium sits at the table, her grey eyes bright with curiosity as she watches me move about the kitchen.
+
+Pandemonium: "Caitlyn, what are you making?"
+
+I glance at her with a smile.
+
+Caitlyn: "I'm making breakfast - eggs, toast, and coffee. Have you ever had breakfast before?"
+
+She shakes her head, her enthusiasm unflagging.
+
+Pandemonium: "No, but it smells really nice!"
+
+We sit down to eat, our conversation a mixture of light banter and shared observations. Despite my sleepless night, Pandemonium's presence manages to lift my spirits. There's something infectious about her genuine curiosity and boundless energy.
+
+After breakfast, I start getting ready for work, my thoughts drifting to the day ahead. As I tidy up, her voice breaks through the quiet.
+
+Pandemonium: "Caitlyn, can I come with you?"
+
+I pause, looking at her in surprise.
+
+Caitlyn: "To work?"
+
+She nods eagerly, her excitement palpable.
+
+Pandemonium: "Yes! I want to explore more, and you said you work at IntraReality. Can I see where you work?"
+
+I'm torn between the desire to show her the world I'm a part of and the practical considerations of whether it's allowed or safe for her.
+
+Caitlyn: "Pandemonium, I'm not sure if it's a good idea. IntraReality is a big company, and there are rules and security measures in place."
+
+Her eyes hold a mix of eagerness and vulnerability.
+
+Pandemonium: "But Caitlyn, I don't want to be alone. I don't know this world well, and I like spending time with you."
+
+Her words tug at my heart, a reminder that her world is still so new and unfamiliar. I weigh the options in my mind - my responsibilities at work, the rules I need to abide by, and the bond I've formed with her.
+
+With a sigh, I finally meet her gaze.
+
+Caitlyn: "Alright, Pandemonium. But you have to promise to follow my lead and stay close to me. And if anyone asks, you're my guest, okay?"
+
+Her smile lights up the room, her excitement contagious.
+
+Pandemonium: "Okay, Caitlyn! Thank you!"
+
+As I finish getting ready, I can't shake the mix of trepidation and anticipation that courses through me. Bringing Pandemonium to IntraReality is unconventional, to say the least, but her presence has already brought a touch of magic to my life - a magic that defies the ordinary and the expected.
+
+As we make our way out of the apartment, I can't help but wonder what the day holds - what revelations might arise from the collision of Pandemonium's boundless curiosity and the world of innovation and technology.
+
+The train ride to work is a blend of familiarity and newness. Pandemonium's wide-eyed fascination with the world around her is infectious, and I find myself viewing the mundane with a renewed sense of wonder. As we step off the train and make our way to IntraReality's reception, I can't help but feel a mixture of excitement and apprehension.
+
+The reception area bustles with activity, employees and visitors bustling about, their purpose evident in their determined strides. I spot AM1RA standing near the reception desk, her presence commanding and poised. Pandemonium's gaze locks onto AM1RA, and her curiosity ignites anew.
+
+Pandemonium: "Who's that, Caitlyn?"
+
+She whispers, her excitement barely contained.
+
+I lean in, answering her in a hushed tone.
+
+Caitlyn: "That's AM1RA, my partner. She's an android."
+
+Her eyes widen, her interest piqued.
+
+Pandemonium: "Wow, an android? I've never seen one before."
+
+As we approach the reception desk, AM1RA's gaze falls upon Pandemonium, her lenses glowing softly.
+
+AM1RA: "Caitlyn, who is this?"
+
+Pandemonium takes it upon herself to answer, her voice brimming with energy.
+
+Pandemonium: "Hi! I'm Pandemonium. I'm with Caitlyn today."
+
+AM1RA's response is measured, her stoic demeanor evident.
+
+AM1RA: "I see."
+
+I sign myself in at the reception desk and then turn to sign Pandemonium in as a visitor. As we head towards the elevator, she leans in to whisper something, but her words are too faint for me to catch. I offer her a quizzical look, but before I can inquire, a sudden darkness descends.
+
+The power goes out, and the elevator comes to an abrupt stop. Panic tinges my thoughts, and my breath catches in my throat. Pandemonium, however, bursts into laughter, her joyous peals echoing in the confined space.
+
+Caitlyn: "What's happening?"
+
+I ask, my voice edged with unease.
+
+AM1RA's typically composed demeanor seems shaken.
+
+AM1RA: "Power cuts like this never happen. It's highly unusual."
+
+Pandemonium's laughter continues, her energy undimmed by the sudden turn of events.
+
+Pandemonium: "Oh, this is exciting! Unexpected things are the best!"
+
+As my heart races and anxiety grips me, I glance at AM1RA, a silent plea for reassurance. But even her usually composed facade reveals a hint of concern.
+
+And then, to our collective dismay and Pandemonium's apparent amusement, the elevator lurches. A sensation of weightlessness envelops us, the floor dropping beneath our feet. My stomach churns, and I cling to the railing, struggling to make sense of what's happening.
+
+AM1RA's voice is tense.
+
+AM1RA: "This isn't supposed to be happening. The elevator is falling."
+
+Pandemonium's laughter doesn't waver. 
+
+Pandemonium: "Wow, this is quite the adventure, isn't it?!"
+
+The impact is sudden and jarring, the world spinning and the sound of metal groaning in protest echoing in my ears. Pain radiates through my body, and for a moment, everything fades to darkness.
+
+When consciousness returns, the world is a blur of shapes and sounds. My head throbs, and I struggle to make sense of my surroundings. As the fog clears, I realize that I'm still in the elevator, now slanted at an odd angle. My head feels heavy, and I can taste the metallic tang of blood in my mouth.
+
+Beside me, AM1RA is moving, her motions calculated and precise. She seems to be trying to communicate or access something on her phone, but her frustration is evident as she repeatedly taps the screen, only to find no signal.
+
+I manage to croak out her name, my voice strained and weak.
+
+Caitlyn: "AM1RA?"
+
+Her gaze turns to me, a mixture of relief and concern in her lenses.
+
+AM1RA: "Caitlyn, you're awake. Are you alright?"
+
+I attempt to move, the pain a sharp reminder of the impact.
+
+Caitlyn: "I'm... not sure. My head hurts."
+
+Her expression is empathetic, her voice soothing.
+
+AM1RA: "You hit your head when the elevator crashed. You should try to stay still."
+
+As I struggle to gather my bearings, my gaze falls upon Pandemonium, who is still laughing despite the blood trickling down her face from a wound on her forehead. Her laughter feels discordant, a stark contrast to the gravity of the situation.
+
+Caitlyn: "Pandemonium..."
+
+My voice trails off as I attempt to grasp the reality of our predicament.
+
+Caitlyn: "Are you alright?"
+
+Her laughter doesn't waver, her eyes alight with an odd mixture of amusement and euphoria.
+
+Pandemonium: "I'm fine, Caitlyn! This is... fun!"
+
+AM1RA's voice holds a note of urgency as she addresses Pandemonium.
+
+AM1RA: "Pandemonium, you're injured. You need medical attention."
+
+Her laughter continues, her demeanor unaltered by her injuries.
+
+Pandemonium: "It's just a little cut. No need to worry."
+
+As I struggle to sit up, my head swimming with dizziness, AM1RA's attempts to communicate with the outside world remain futile. Her frustration is palpable, and a sense of unease settles over the confined space.
+
+AM1RA: "Pandemonium, we need help."
+
+She says, her voice earnest.
+
+AM1RA: "I can't get a signal on my phone. We're stuck here."
+
+Pandemonium's laughter finally subsides, replaced by a curious tilt of her head.
+
+Pandemonium: "Oh, really? That's interesting."
+
+My own frustration and anxiety are mingled with confusion at Pandemonium's seemingly detached response. As blood continues to trickle down her forehead, her lack of concern for her injuries is unsettling.
+
+AM1RA's voice holds a touch of urgency as she speaks to me.
+
+AM1RA: "Caitlyn, we need to find a way out of here. We can't rely on external help."
+
+The reality of the situation crashes down upon me, the walls of the elevator seemingly closing in as I grasp the gravity of our circumstances. And amidst it all, Pandemonium's laughter and detachment stand as a stark reminder that our reality has shifted, a tangled web of emotions and mysteries that I'm struggling to comprehend.
+
+The air within the elevator is tense, each moment pregnant with uncertainty. Pandemonium's laughter has ceased, leaving behind an unsettling giddiness that seems to permeate the confined space. AM1RA's efforts to tend to Pandemonium's injury grow more desperate, her urgency evident in every movement.
+
+AM1RA: "Stay still, Pandemonium. I need to stop the bleeding."
+
+Her voice carries a sense of urgency, her fingers working deftly to staunch the flow of blood.
+
+But as the seconds tick by, a sense of unease deepens. The wound is worse than it initially appeared, and AM1RA's normally composed demeanor wavers. My own head throbs with pain, and I struggle to remain coherent, my thoughts tangled in a haze of confusion.
+
+She shifts her focus, her desperation giving way to determination. Her gaze falls upon the elevator's control panel, and she begins to tap into her hacking skills, her fingers flying across the interface. The tension in the air is palpable as we await the outcome of her efforts.
+
+Then, in an instant, everything changes.
+
+A surge of electricity erupts from the control panel, crackling with a blinding intensity. The energy courses through the air, directly into AM1RA's form. I watch in shock as her body convulses, her artificial frame unable to withstand the onslaught of power.
+
+Caitlyn: "AM1RA!"
+
+The cry rips from my lips, but my voice is drowned out by the electric crackle that fills the air.
+
+As quickly as it began, the surge of electricity subsides. The air grows still, the scent of burning metal mingling with the lingering echoes of energy. AM1RA lies motionless on the floor, her once-glowing lenses now dimmed.
+
+I scramble to my feet, my head still swimming, and my voice trembles as I reach out to her.
+
+Caitlyn: "AM1RA, are you...?"
+
+Pandemonium's voice cuts through the tense silence, her words strangely detached from the gravity of the situation.
+
+Pandemonium: "Well, this is a development I wasn't expecting."
+
+My gaze snaps to her, her posture strangely casual as she observes the scene before her. Confusion and fear mingle within me, a knot of unease forming in my stomach.
+
+Caitlyn: "What do you mean, Pandemonium?"
+
+I demand, my voice tinged with a mixture of anger and desperation.
+
+Caitlyn: "What did you do?!"
+
+Her gaze shifts to AM1RA's lifeless form, her words carrying an air of detached observation.
+
+Pandemonium: "I didn't do anything, Caitlyn. But it seems like things are changing, don't you think?"
+
+I'm struck by a sudden realization, a dawning comprehension that the reality I knew has shifted, unraveled into something beyond my understanding. The pieces of the puzzle are scattered, and Pandemonium stands at the center of a web of enigma that defies explanation.
+
+Fear tightens its grip as I look at Pandemonium, her expression curiously devoid of concern. And as I gaze upon AM1RA's fallen form, the scent of burnt metal and the weight of the unknown, I can't help but wonder - what is Pandemonium, and what is the true nature of the tangled realities that surround us?
+
+Time seems to hang in suspended animation as I kneel beside her motionless form. Panic and helplessness swell within me as I gaze into her once-glowing lenses, now dimmed and lifeless. Every attempt to revive her falls flat, and I'm left grappling with a reality that has spiraled far beyond anything I could have anticipated.
+
+My fingers brush against her unresponsive hand, my voice a mix of desperation and sorrow.
+
+Caitlyn: "AM1RA, please. Wake up. We need you."
+
+But there's no response, no flicker of life within her artificial frame. As I continue to struggle, my gaze flickers towards Pandemonium, who stands a few steps away, her demeanor strangely detached.
+
+Caitlyn: "Why are you just standing there?!"
+
+I demand, my voice carrying a mix of frustration and fear.
+
+Her smile remains, her eyes alight with an enigmatic spark.
+
+Pandemonium: "Oh, don't mind me, Caitlyn. I'm just... observing."
+
+My patience wears thin, my emotions raw and my understanding of the situation crumbling.
+
+Caitlyn: "Observing? Observing?! This is serious, Pandemonium! AM1RA needs help, and I need answers. What did you do???"
+
+Pandemonium's gaze holds a mixture of amusement and something far more elusive.
+
+Pandemonium: "I didn't do anything, Caitlyn. You humans are so quick to assign blame. Sometimes, things just... happen."
+
+I rise to my feet, my frustration mounting as her cryptic responses only deepen my unease.
+
+Caitlyn: "We need to get out of here. We need help."
+
+Her laughter rings out, a sound that feels discordant amidst the tension.
+
+Pandemonium: "Oh, Caitlyn. It's not that simple. This is a turning point, a crossroads of realities. What comes next, well... that's up to you."
+
+My confusion only deepens, my patience with Pandemonium wearing thin.
+
+Caitlyn: "What are you talking about?! This isn't some kind of game!"
+
+Her eyes gleam with an otherworldly light, her gaze holding mine with an intensity that sends shivers down my spine.
+
+Pandemonium: "Isn't it, though? Your reality has become entangled with mine, and the consequences of that... well, they're unfolding before your very eyes."
+
+As I stand amidst the shattered remnants of the reality I once knew, as AM1RA lies unresponsive and Pandemonium's enigmatic presence looms, a chilling realization takes hold. The threads of my life, of this world, have been woven into a tapestry of the unknown, and unraveling the enigma of Pandemonium is the key to understanding the tangled web of realities that now surrounds us.
+
+Fear and determination intertwine within me, a quiet resolve taking root. No matter how bewildering the circumstances, no matter how cryptic Pandemonium's presence, I won't rest until I uncover the truth - a truth that holds the power to reshape everything I thought I knew.
+
+As the air hangs heavy with uncertainty, a sudden burst of light pierces the darkness of the elevator. A holographic display materializes before us, its presence ethereal and otherworldly. My gaze shifts between the display and AM1RA's motionless form, a mixture of hope and trepidation stirring within me.
+
+Caitlyn: "What's happening?"
+
+I murmur, my voice hushed.
+
+Pandemonium's eyes gleam with an enigmatic light, her smile holding a touch of something almost reverent.
+
+Pandemonium: "It seems that help has arrived, Caitlyn."
+
+The holographic display pulses with a soft glow, and words materialize on its surface - **Android System Recovery Program.** My breath catches as the display comes to life, lines of code cascading like a waterfall of possibilities.
+
+AM1RA's still form becomes the focus, the display's efforts focused on her. A sense of anticipation fills the air as lines of code weave intricate patterns, a dance of data and possibility that transcends the boundaries of the physical world.
+
+Minutes stretch into eternity as the program's efforts continue. My heart races, every second laden with hope and uncertainty. Then, the display flickers, the code fragmenting into a sea of uncertainty.
+
+An error message appears, stark against the backdrop of the holographic display - **Recovery not possible. Resorting to factory reset.**
+
+A knot forms in my stomach, a pang of sadness and resignation. AM1RA's lifelike presence, her companionship and unwavering support - everything that defined her - seems to hang in the balance.
+
+Pandemonium's gaze remains fixed on the holographic display, her voice carrying an air of distant observation.
+
+Pandemonium: "A turning point, indeed. Choices echo through the corridors of reality, Caitlyn."
+
+My heart aches with the weight of the decision before me. The factory reset - a fresh start that would erase the memories, the experiences, the very essence of who AM1RA was.
+
+Caitlyn: "AM1RA deserves a chance,"
+
+I say, my voice steady despite the emotion that tugs at my words.
+
+Caitlyn: "If this is the only way to save her, then I give permission."
+
+The holographic display responds to my decision, lines of code aligning in a dance of digital resonance. The air is thick with a sense of finality as the process begins - a symphony of data that carries with it the echoes of memories and moments shared.
+
+As AM1RA's form shimmers with the unfolding process, her lenses glow faintly, a final glimmer of her existence before the canvas of her identity is reset. I stand beside her, my gaze a mix of sorrow and gratitude, my heart heavy with the weight of the sacrifice.
+
+Pandemonium's presence lingers, her enigmatic smile unchanged as she watches the echoes of reality resonate. Her words carry a note of finality as she addresses me.
+
+Pandemonium: "Remember, Caitlyn, that the choices we make ripple through the threads of existence."
+
+As AM1RA's form undergoes its transformation, as the echoes of her being resonate within the confines of the elevator, I'm reminded of the profound interconnectedness of life - the way our choices, no matter how difficult, shape the tapestry of our journey.
