Wrote a bit more of Day 2

--- a/docs/plans/story_v2.mkd
+++ b/docs/plans/story_v2.mkd
@@ -979,3 +979,71 @@ Pandemonium's presence lingers, her enigmatic smile unchanged as she watches the
 Pandemonium: "Remember, Caitlyn, that the choices we make ripple through the threads of existence."
 
 As AM1RA's form undergoes its transformation, as the echoes of her being resonate within the confines of the elevator, I'm reminded of the profound interconnectedness of life - the way our choices, no matter how difficult, shape the tapestry of our journey.
+
+A soft hum fills the air as the holographic display's dance of data reaches its crescendo. I watch with bated breath as the lines of code converge, weaving the tapestry of AM1RA's existence anew. The air is charged with anticipation, a quiet hope that this factory reset will bring her back to me.
+
+And then, as quickly as it began, it's over. AM1RA's form stirs, her body coming to life with a subtle shudder. I watch, heart in my throat, as her eyes flutter open. The once-glowing lenses have transformed, now resembling warm, human-like brown eyes.
+
+She blinks in confusion, her gaze focusing on me.
+
+AM1RA: "Where... where am I?"
+
+Relief courses through me, a wellspring of emotion that I can barely contain.
+
+Caitlyn: "AM1RA, you're in the elevator. You're safe."
+
+Her gaze shifts to Pandemonium, who stands by with a curious expression, and then back to me. Confusion mingles with wariness in her eyes.
+
+AM1RA: "Elevator? Pandemonium?"
+
+Pandemonium's eyes are bright with curiosity as she tilts her head.
+
+Pandemonium: "Hello again!"
+
+Her brows knit in confusion.
+
+AM1RA: "Hello... but I don't understand."
+
+As her memory fails her, a mixture of emotions churn within me. Relief at her return, concern for her disorientation, and a pang of sorrow for the experiences now lost to the abyss of the factory reset.
+
+Just as the weight of the moment settles, a gentle vibration ripples through the elevator beneath our feet. The world around us shifts, the darkness of the confined space giving way to motion. The elevator is whirring back to life, moving upward with an eerie quietness.
+
+The doors slide open, revealing the 13th floor - the floor we were meant to reach from the start. We step out into the bright corridor, the familiarity of the surroundings contrasting with the strangeness of the journey we've just undertaken.
+
+Her gaze shifts around, her confusion evident.
+
+AM1RA: "This is... IntraReality?"
+
+I nod, my voice gentle as I address her.
+
+Caitlyn: "Yes, AM1RA. You work here."
+
+Pandemonium's presence has transformed once more, her demeanor shifting to that of her bubbly, childish self. She bounces on her heels, a joyful exclamation escaping her lips.
+
+Pandemonium: "This is fun! Everything's new!"
+
+AM1RA's gaze shifts to Pandemonium, then back to me.
+
+AM1RA: "I... don't remember anything. Who am I?"
+
+My heart aches at the question, a reminder of the sacrifice that brought her back.
+
+Caitlyn: "You... You're AM1RA. You're an android created by IntraReality."
+
+Her expression remains clouded with confusion, her voice laced with uncertainty.
+
+AM1RA: "AM1RA... I suppose that's who I am now."
+
+We begin to walk down the corridor, Pandemonium's excitement evident in every step. I turn to AM1RA, my voice a mix of reassurance and explanation.
+
+Caitlyn: "You're assigned to the Algorithmic Research Department. You'll be working on android algorithms and development."
+
+Her eyes hold a mix of acceptance and resignation.
+
+AM1RA: "I see. I... don't have much choice, do I?"
+
+Pandemonium's laughter dances on the air, her energy contagious.
+
+Pandemonium: "That's the spirit!"
+
+As we navigate the corridors of IntraReality, the echoes of the past resonate within us - echoes of choices made, of sacrifices endured. And amidst it all, the enigma of Pandemonium remains - a presence that has woven its way into our reality, leaving ripples of uncertainty and possibility in its wake.
